# Total-Search

./: .dockerignore  .env.example  .gitignore  .vercel-build-reset  .vercelignore  Dockerfile  PROJECT_STATUS.md  README.md  docker-compose.yml  env.example  index.py  pyproject.toml  requirements.txt  six.py  vercel.json
api/: __init__.py  main.py  requirements.txt
migrations/: env.py
migrations/versions/: 001_initial_schema.py
public/: index.html
scripts/: __init__.py  export_for_rag.py  run_pipeline.py  seed_keywords.py
src/: __init__.py  behavioral_analysis.py  config.py  demo_trends.py
src/calculators/: __init__.py  proxy_scores.py  unified_score.py
src/clients/: __init__.py  apify.py  base.py  dataforseo.py  google_trends.py  junglescout.py  meta_ads.py  pinterest.py  tickertrends.py
src/db/: __init__.py  models.py  repository.py
src/exporters/: __init__.py  csv_exporter.py  json_exporter.py
src/models/: __init__.py  keyword.py
src/pipeline/: __init__.py  keyword_pipeline.py
src/scrapers/: __init__.py  instagram.py  tiktok.py
src/services/: __init__.py  export.py
src/utils/: __init__.py  logging.py
templates/: brand_dashboard.html  compare.html  dashboard.html  dashboard_simple.html  demand_distribution.html  test.html
tests/: __init__.py  conftest.py
tests/integration/: test_clients.py
tests/unit/: test_exporters.py  test_models.py  test_pipeline.py  test_proxy_scores.py  test_unified_score.py
